--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node ./index.ts",
-    "dev": "nodemon ./index.ts"
+    "start": "ts-node ./index.ts",
+    "dev": "nodemon ./index.ts",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -21,18 +22,24 @@
     "mongoose": "^6.3.6"
   },
   "devDependencies": {
+    "@shelf/jest-mongodb": "^3.0.1",
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/jest": "^28.1.3",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^17.0.41",
     "@typescript-eslint/eslint-plugin": "^5.27.1",
     "@typescript-eslint/parser": "^5.27.1",
+    "babel-jest": "^28.1.1",
     "eslint": "^8.17.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-prettier-standard": "^4.0.1",
     "eslint-plugin-prettier": "^4.0.0",
+    "jest": "^28.1.1",
     "prettier": "^2.6.2",
+    "supertest": "^6.2.3",
+    "ts-jest": "^28.0.5",
     "ts-node": "^10.8.1",
     "tsc-watch": "^5.0.3",
     "typescript": "^4.7.3"
