Completed Docker integration

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-CONNECTION_STRING="mongodb://0.0.0.0:27017/candidiateKnowledge"
+CONNECTION_STRING="mongodb://mongo:27017/candidiateKnowledge"
 port=3001
 NODE_ENV="development"
 JWT_SECRET="someSecret"
