--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,17 @@
 {
     "compilerOptions": {
-      /* Visit https://aka.ms/tsconfig.json to read more about this file */
       "target": "ES5",
       "module": "CommonJS",
       "outDir": "dist",
       "rootDir": "./",
       "allowSyntheticDefaultImports": true,
-      "removeComments": true /* Do not emit comments to output. */,
-      "esModuleInterop": true /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */,
+      "removeComments": true,
+      "esModuleInterop": true,
       "typeRoots": ["node_modules/@types", "@types"],
-      "sourceMap": true /* Specify the location where debugger should locate TypeScript files instead of source locations. */,
+      "sourceMap": true,
       "resolveJsonModule": true,
-      "skipLibCheck": true /* Skip type checking of declaration files. */,
-      "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */,
+      "skipLibCheck": true,
+      "forceConsistentCasingInFileNames": true,
       "watch": true,
       "moduleResolution": "node"
     },
