--- a/.env
+++ b/.env
@@ -2,5 +2,6 @@ CONNECTION_STRING="mongodb://mongo:27017/candidiateKnowledge"
 TEST_CONNECTION_STRING="mongodb://127.0.0.1:27017/TestCandidiateKnowledge"
 PORT=3001
 TEST_PORT=3000
-NODE_ENV="development"
+NODE_ENV="development" 
+#add 'production' for production NODE_ENV
 JWT_SECRET="someSecret"
