--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-CONNECTION_STRING="mongodb://mongo:27017/candidiateKnowledge"
+CONNECTION_STRING="mongodb://127.0.0.1:27017/candidiateKnowledge"
 TEST_CONNECTION_STRING="mongodb://127.0.0.1:27017/TestCandidiateKnowledge"
 PORT=3001
 TEST_PORT=3000
