--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "ts-node ./server.ts",
-    "dev": "nodemon ./index.ts",
+    "dev": "nodemon ./server.ts",
     "test": "jest"
   },
   "keywords": [],
